@@ -1,2 +1,4 @@
 ﻿- Fix NullreferenceException when selected prop pack is no longer subscribed to
+- Motorway gantries added to officially replacable signs
 - Added support for 'Italy road signs - PACK' by Arnold J. Rimmer, Bsc. Ssc.
+- German sign pack for Highway/National Road/Road-work-sites and other random signs by UFF
